--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -6,7 +6,7 @@
     }
   ],
   "name": "GreenBusinessTravelersBot",
-  "namespace": "",
+  "namespace": "mulesoft_pse",
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "57.0"
 }
